# piilo

./: .gitattributes  .gitignore  MANIFEST.in  Pipfile  README.md  analyzer.py  anonymize.py  anonymizer.py  app.py  main.py  match_replace.py  names_database.py  pyproject.toml  requirements.txt  setup.py  spacy_analyzer.py  spacy_recognizer.py
configs/: kaggle_third.yaml
data/: ascii_names.parquet
models/: anonymize.py
piilo/: __init__.py  anonymizer.py  main.py  names_database.py  test_main.py
piilo/configs/: __init__.py  kaggle_third.yaml
piilo/engines/: analyzer.py  anonymizer.py  name_getter.py
