[tool.poetry]
name = "piilo"
version = "0.0.2"
description = ""
authors = ["Langdon Holmes", "Joon Suh Choi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spacy = "^3.7.6"
names-dataset = "^3.1.0"
nameparser = "^1.1.3"
streamlit = "^1.37.1"
st-annotated-text = "^4.0.1"
presidio-analyzer = "^2.2.355"
presidio-anonymizer = "^2.2.355"
polars = "^1.5.0"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}
pandas = "^2.2.2"
numpy = "<2.0.0"
faker = "^27.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
